--- a/Coliseum/Coliseum.csproj
+++ b/Coliseum/Coliseum.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,10 +58,12 @@
     <Compile Include="Sistema\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Escuela\Tienda.cs" />
+    <Compile Include="Sistema\SistemaCargaLectura.cs" />
     <Compile Include="Torneos\Encuentro.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
